--- a/m.html
+++ b/m.html
@@ -90,7 +90,7 @@
         <section class="art-section">
             <!-- Example Art Piece -->
             <div class="art-piece">
-                <img src="img/sc1.png" alt="Sculpture 1">
+                <img src="sc1.png" alt="Sculpture 1">
                 <h3>Title of Sculpture 1</h3>
                 <p>Description of the artwork, the concept behind it, and materials used.</p>
             </div>
