--- a/m.html
+++ b/m.html
@@ -40,32 +40,6 @@
             width: 90%;
             margin: 20px auto;
         }
-        .art-section {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
-        }
-        .art-piece {
-            width: 30%;
-            margin-bottom: 20px;
-            border-radius: 10px;
-            overflow: hidden;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        .art-piece img {
-            width: 100%;
-            height: auto;
-        }
-        .art-piece h3 {
-            margin: 10px;
-            font-size: 1.5em;
-            color: #333;
-        }
-        .art-piece p {
-            margin: 10px;
-            font-size: 1em;
-            color: #555;
-        }
         footer {
             background-color: #333;
             color: #fff;
@@ -79,22 +53,43 @@
         <h1>My Art Portfolio</h1>
         <p>Welcome to my collection of sculptures and paintings</p>
     </header>
-
+    
     <nav class="nav-tabs">
-        <a href="#gallery">Gallery</a>
-        <a href="#cv">CV</a>
-        <a href="#contact">Contact</a>
+        <a href="gallery.html">Gallery</a>
+        <a href="cv.html">CV</a>
+        <a href="contact.html">Contact</a>
     </nav>
 
-    <div class="container" id="gallery">
+    <footer>
+        <p>&copy; 2024 My Art Portfolio. All Rights Reserved.</p>
+    </footer>
+</body>
+</html>
+
+<!-- gallery.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gallery - My Art Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+</head>
+<body>
+    <header>
+        <h1>Gallery</h1>
+    </header>
+
+    <div class="container">
         <section class="art-section">
             <!-- Example Art Piece -->
             <div class="art-piece">
-                <img src="img/sc1.png" alt="Sculpture 1">
+                <img src="img/sc1.png/" alt="Sculpture 1">
                 <h3>Title of Sculpture 1</h3>
                 <p>Description of the artwork, the concept behind it, and materials used.</p>
             </div>
-
+            
             <div class="art-piece">
                 <img src="painting1.jpg" alt="Painting 1">
                 <h3>Title of Painting 1</h3>
@@ -105,13 +100,53 @@
         </section>
     </div>
 
-    <div class="container" id="cv">
-        <h2>Curriculum Vitae</h2>
+    <footer>
+        <p>&copy; 2024 My Art Portfolio. All Rights Reserved.</p>
+    </footer>
+</body>
+</html>
+
+<!-- cv.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CV - My Art Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+</head>
+<body>
+    <header>
+        <h1>Curriculum Vitae</h1>
+    </header>
+
+    <div class="container">
         <p>Here you can include information about your education, exhibitions, awards, and other relevant experience.</p>
     </div>
 
-    <div class="container" id="contact">
-        <h2>Contact</h2>
+    <footer>
+        <p>&copy; 2024 My Art Portfolio. All Rights Reserved.</p>
+    </footer>
+</body>
+</html>
+
+<!-- contact.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact - My Art Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+</head>
+<body>
+    <header>
+        <h1>Contact</h1>
+    </header>
+
+    <div class="container">
         <p>If you would like to get in touch, please email me at: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
     </div>
 
