--- a/m.html
+++ b/m.html
@@ -6,73 +6,183 @@
     <title>My Art Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
         body {
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f5f5f5;
+            background-color: #f0f0f5;
+            color: #333;
         }
         header {
-            background-color: #333;
+            background: linear-gradient(to right, #4e54c8, #8f94fb);
             color: #fff;
-            padding: 20px;
+            padding: 40px 20px;
             text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            border-bottom-left-radius: 50% 20px;
+            border-bottom-right-radius: 50% 20px;
         }
         .nav-tabs {
             display: flex;
             justify-content: center;
-            background-color: #444;
-            padding: 10px;
+            background-color: #333;
+            padding: 15px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            border-radius: 30px;
+            margin: 20px auto;
+            width: 90%;
         }
-        .nav-tabs a {
+        .nav-tabs button {
             color: #fff;
-            padding: 10px 20px;
-            text-decoration: none;
-            margin: 0 10px;
-            border-radius: 5px;
-            transition: background-color 0.3s;
+            background-color: transparent;
+            border: none;
+            padding: 10px 25px;
+            margin: 0 15px;
+            border-radius: 30px;
+            cursor: pointer;
+            transition: background-color 0.3s, transform 0.3s;
         }
-        .nav-tabs a:hover {
-            background-color: #666;
+        .nav-tabs button:hover, .nav-tabs button.active {
+            background-color: #555;
+            transform: scale(1.1);
         }
         .container {
-            width: 90%;
+            display: none;
+            width: 80%;
             margin: 20px auto;
+            padding: 20px;
+            background: #fff;
+            border-radius: 15px;
+            box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+        }
+        .container.active {
+            display: block;
+        }
+        .toggle-options {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .toggle-options button {
+            padding: 15px 30px;
+            margin: 10px;
+            border: none;
+            border-radius: 50px;
+            background: #4e54c8;
+            color: #fff;
+            cursor: pointer;
+            font-size: 1.1em;
+            transition: all 0.3s ease;
+        }
+        .toggle-options button:hover {
+            background: #8f94fb;
+            transform: translateY(-3px);
+        }
+        .toggle-container {
+            position: relative;
+            width: 80%;
+            margin: 20px auto;
+            height: 500px;
+            perspective: 1000px;
+            overflow: hidden;
+        }
+        .toggle-content {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: #fff;
+            border-radius: 15px;
+            box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+            transition: transform 1s ease-in-out;
+            transform-style: preserve-3d;
+        }
+        .toggle-content.show-sculptures {
+            transform: rotateY(0deg);
+        }
+        .toggle-content.show-paintings {
+            transform: rotateY(180deg);
         }
         .art-section {
+            padding: 20px;
+            backface-visibility: hidden;
+            position: absolute;
+            width: 100%;
+            height: 100%;
             display: flex;
             flex-wrap: wrap;
             justify-content: space-around;
+            align-items: flex-start;
+        }
+        .art-section.sculptures {
+            transform: rotateY(0deg);
+        }
+        .art-section.paintings {
+            transform: rotateY(180deg);
         }
         .art-piece {
-            width: 30%;
-            margin-bottom: 20px;
-            border-radius: 10px;
-            overflow: hidden;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            background: #fff;
+            border-radius: 15px;
+            box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            margin: 20px;
+            flex: 1 1 calc(45% - 40px);
+            max-width: calc(45% - 40px);
+            transition: transform 0.3s ease;
+        }
+        .art-piece:hover {
+            transform: translateY(-10px);
         }
         .art-piece img {
-            width: 100%;
-            height: auto;
-        }
-        .art-piece h3 {
-            margin: 10px;
-            font-size: 1.5em;
-            color: #333;
-        }
-        .art-piece p {
-            margin: 10px;
-            font-size: 1em;
-            color: #555;
+            max-width: 100%;
+            border-radius: 10px;
+            margin-bottom: 15px;
         }
         footer {
             background-color: #333;
-            color: #fff;
-            padding: 20px;
+            color: #ccc;
+            padding: 30px;
             text-align: center;
+            margin-top: 40px;
+            box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.2);
+            border-top-left-radius: 50% 20px;
+            border-top-right-radius: 50% 20px;
+        }
+        footer a {
+            color: #ffcc00;
+            text-decoration: none;
+            margin: 0 10px;
+            font-size: 1.5em;
+            transition: color 0.3s ease;
+        }
+        footer a:hover {
+            color: #fff;
         }
     </style>
+    <script>
+        function toggleGallery(view) {
+            const container = document.querySelector('.toggle-content');
+            if (view === 'sculptures') {
+                container.classList.remove('show-paintings');
+                container.classList.add('show-sculptures');
+            } else if (view === 'paintings') {
+                container.classList.remove('show-sculptures');
+                container.classList.add('show-paintings');
+            }
+        }
+        function toggleTab(tabId) {
+            const tabs = document.querySelectorAll('.container');
+            const navButtons = document.querySelectorAll('.nav-tabs button');
+            tabs.forEach(tab => {
+                tab.classList.remove('active');
+            });
+            navButtons.forEach(button => {
+                button.classList.remove('active');
+            });
+            document.getElementById(tabId).classList.add('active');
+            document.querySelector(`.nav-tabs button[onclick="toggleTab('${tabId}')"]`).classList.add('active');
+        }
+    </script>
 </head>
 <body>
     <header>
@@ -81,42 +191,67 @@
     </header>
 
     <nav class="nav-tabs">
-        <a href="#gallery">Gallery</a>
-        <a href="#cv">CV</a>
-        <a href="#contact">Contact</a>
+        <button onclick="toggleTab('gallery')"><i class="fas fa-paint-brush"></i> Gallery</button>
+        <button onclick="toggleTab('cv')"><i class="fas fa-user"></i> CV</button>
+        <button onclick="toggleTab('contact')"><i class="fas fa-envelope"></i> Contact</button>
     </nav>
 
-    <div class="container" id="gallery">
-        <section class="art-section">
-            <!-- Example Art Piece -->
-            <div class="art-piece">
-                <img src="img/sc1.png" alt="Sculpture 1">
-                <h3>Title of Sculpture 1</h3>
-                <p>Description of the artwork, the concept behind it, and materials used.</p>
+    <div id="gallery" class="container active">
+        <div class="toggle-options">
+            <button onclick="toggleGallery('sculptures')">View Sculptures</button>
+            <button onclick="toggleGallery('paintings')">View Paintings</button>
+        </div>
+        <div class="toggle-container">
+            <div class="toggle-content show-sculptures">
+                <section class="art-section sculptures">
+                    <h2>Sculptures</h2>
+                    <!-- Sculptures Section -->
+                    <div class="art-piece">
+                        <img src="sculpture1.jpg" alt="Sculpture 1">
+                        <h3>Title of Sculpture 1</h3>
+                        <p>Description of the artwork, the concept behind it, and materials used.</p>
+                    </div>
+                    <div class="art-piece">
+                        <img src="sculpture2.jpg" alt="Sculpture 2">
+                        <h3>Title of Sculpture 2</h3>
+                        <p>Description of the artwork, the concept behind it, and materials used.</p>
+                    </div>
+                </section>
+                <section class="art-section paintings">
+                    <h2>Paintings</h2>
+                    <!-- Paintings Section -->
+                    <div class="art-piece">
+                        <img src="painting1.jpg" alt="Painting 1">
+                        <h3>Title of Painting 1</h3>
+                        <p>Description of the artwork, the concept behind it, and materials used.</p>
+                    </div>
+                    <div class="art-piece">
+                        <img src="painting2.jpg" alt="Painting 2">
+                        <h3>Title of Painting 2</h3>
+                        <p>Description of the artwork, the concept behind it, and materials used.</p>
+                    </div>
+                </section>
             </div>
-
-            <div class="art-piece">
-                <img src="painting1.jpg" alt="Painting 1">
-                <h3>Title of Painting 1</h3>
-                <p>Description of the artwork, the concept behind it, and materials used.</p>
-            </div>
-
-            <!-- Add more pieces as needed -->
-        </section>
+        </div>
     </div>
 
-    <div class="container" id="cv">
+    <div id="cv" class="container">
         <h2>Curriculum Vitae</h2>
         <p>Here you can include information about your education, exhibitions, awards, and other relevant experience.</p>
     </div>
 
-    <div class="container" id="contact">
+    <div id="contact" class="container">
         <h2>Contact</h2>
         <p>If you would like to get in touch, please email me at: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
     </div>
 
     <footer>
         <p>&copy; 2024 My Art Portfolio. All Rights Reserved.</p>
+        <div>
+            <a href="https://www.instagram.com/yourprofile" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/yourprofile" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.facebook.com/yourprofile" target="_blank"><i class="fab fa-facebook"></i></a>
+        </div>
     </footer>
 </body>
 </html>
